# opengl-lecture-code

./: CMakeLists.txt  main.cpp
helpers/: shader_class.cpp  shader_class.h
shader_folder/: shader.frag  shader.vert
